fixed sizing and spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,9 @@
 /*
   1. Use a more-intuitive box-sizing model.
 */
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -15,12 +17,9 @@
 /*
   3. Allow percentage-based heights in the application
 */
-html, body {
-  height: 100%;
-}
-
+html,
 body {
-  cursor: url('/mouse/mouse.png'), auto;
+  height: 100%;
 }
 
 /*
@@ -33,12 +32,22 @@ body {
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+
+  color: #ffffff;
+  cursor: url('/mouse/mouse.png'), auto;
+  background-image: url('/background/background.png');
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 /*
   6. Improve media defaults
 */
-img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
 }
@@ -46,20 +55,30 @@ img, picture, video, canvas, svg {
 /*
   7. Remove built-in form typography styles
 */
-input, button, textarea, select {
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
 
 /*
   8. Avoid text overflows
 */
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
 
 /*
   9. Create a root stacking context
 */
-#root, #__next {
+#root,
+#__next {
   isolation: isolate;
 }
